--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
-  padding-top: 3%;
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 1%;
 }
 
 .texbox{
@@ -18,8 +18,7 @@ h1{
 }
 
 .content{
-  height:680px;
-  margin-top: 1.5%;
+  height:650px;
 }
 
 .button{
@@ -40,7 +39,7 @@ h1{
 }
 
 .rbutton{
-  background-color: hotpink;
+  background-color:  hotpink;
 }
 
 .button:hover{
@@ -57,6 +56,23 @@ h1{
 .count{
   position: absolute;
   font-size: 180px;
-  left:77%;
+  left:75%;
   top:15%;
+}
+
+.logs{
+  position: absolute;
+  top:37%;
+  left:88%;
+}
+
+th{
+  background-color: rgb(255, 136, 136);
+  height:15px;
+}
+
+td{
+  text-align: center;
+  font-size: 30px;
+  height:60px;
 }
